--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -1,10 +1,24 @@
 ---
-title: "Welcome To My Blog"
+title: "Blog 2.0"
 author: "Mark Cherrie"
-date: "2024-06-18"
+date: "2024-09-10"
 categories: [news]
 ---
 
-This is the first post in a Quarto blog. Welcome!
+I used to blog for years but it slowly tailed off. 
 
-![](thumbnail.jpg)
+I miss having a place on the internet where I can put down ideas, progress on side projects and general life stuff. So here it is - blog 2.0.
+
+Mainly what you'll get here is:  
+
+- Insights from data
+- Experiences with software, tools and workflows 
+- Escapades in husbandary (being a husband not cultivating plants/animals), fatherhood, sport/fitness and food. 
+
+I've always been fond of authors that try to make their work reproducible and I will attempt that too for the data/software stuff, time permitting. 
+
+That's enough for a welcome, now onto the first post. 
+
+
+
+![by Shubham Dhage](thumbnail.jpg)
