--- a/about.qmd
+++ b/about.qmd
@@ -15,4 +15,11 @@ about:
       href: https://github.com/markocherrie
 ---
 
-Ideas, progress on side projects and general life stuff from a resercher turned software developer.
+Hi I'm Mark - a scientist turned software developer, living in Edinburgh, Scotland
+
+This blog will feature:
+
+- Insights from data
+- Building online software in public
+- Experiences with tools and workflows 
+- Escapades in husbandary (being a husband not cultivating plants/animals), fatherhood, sport/fitness and food. 
