--- a/about.qmd
+++ b/about.qmd
@@ -17,9 +17,6 @@ about:
 
 Hi I'm Mark - a scientist turned software developer, living in Edinburgh, Scotland
 
-This blog will feature:
+This blog will feature: Insights from data, Building online software in public, Experiences with tools and workflows and Escapades in husbandary (being a husband not cultivating plants/animals), fatherhood, sport/fitness and food. 
 
-* Insights from data
-* Building online software in public
-* Experiences with tools and workflows 
-* Escapades in husbandary (being a husband not cultivating plants/animals), fatherhood, sport/fitness and food. 
+The photo is from this years Loch Ness 24, a 24 hour run that I completed with a few friends. That was me on lap 4 of 8, sodden, in a stinking tent - it marked my last happy lap!
