--- a/posts/welcome/index.qmd
+++ b/posts/welcome/index.qmd
@@ -12,13 +12,13 @@ I miss having a place on the internet where I can put down ideas, progress on si
 Mainly what you'll get here is:  
 
 * Insights from data
-* Building online software in public
+* Building software in public
 * Experiences with tools and workflows 
 * Escapades in husbandary (being a husband not cultivating plants/animals), fatherhood, sport/fitness and food. 
 
 I've always been fond of authors that try to make their work reproducible and I will attempt that too for the data/software stuff, time permitting. 
 
-That's enough for a welcome, now onto the first post. 
+That's enough of a welcome, now onto the first post. 
 
 
 
